--- a/src/site/markdown/example-insert.md.vm
+++ b/src/site/markdown/example-insert.md.vm
@@ -5,7 +5,7 @@ Data insertion `INSERT` operations can be done through `JdbcSession`:
 ```
 public class Main {
   public static void main(String[] args) {
-    final long id = new JdbcSession(/* JDBC data source */)
+    final long id = new JdbcSession(source)
       .sql("INSERT INTO employee (name, salary) VALUES (?, ?)")
       .set("Jeff Lebowski")
       .set(35000)
