--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -12,7 +12,7 @@ public class Main {
     String name = new JdbcSession(source)
       .sql("SELECT name FROM foo WHERE id = ?")
       .set(123)
-      .select(new SingleHandler<String>(String.class));
+      .select(new SingleOutcome<String>(String.class));
   }
 }
 ```
