--- a/src/site/markdown/example-transaction.md.vm
+++ b/src/site/markdown/example-transaction.md.vm
@@ -15,7 +15,7 @@ public class Main {
       .update()
       .sql("INSERT INTO employee VALUES (?)")
       .set("Walter Sobchak")
-      .insert(new VoidOutcome())
+      .insert(VoidOutcome.INSTANCE)
       .commit();
   }
 }
