Issue #21 Removed VoidOutcome, NotEmptyOutcome, UpdateCountOutcome Consolidated test cases into OutcomeTest Updated documentation

--- a/src/site/markdown/example-transaction.md.vm
+++ b/src/site/markdown/example-transaction.md.vm
@@ -15,7 +15,7 @@ public class Main {
       .update()
       .sql("INSERT INTO employee VALUES (?)")
       .set("Walter Sobchak")
-      .insert(VoidOutcome.INSTANCE)
+      .insert(Outcome.VOID)
       .commit();
   }
 }
