--- a/src/site/apt/example-select.apt.vm
+++ b/src/site/apt/example-select.apt.vm
@@ -1,8 +1,16 @@
-# Selecting SQL Rows Through JDBC
+  ---
+  Selecting SQL Rows Through JDBC
+  ---
+  Yegor Bugayenko
+  ---
+  2014-11-02
+  ---
 
-This is how you fetch all rows from an SQL `SELECT` query:
+Selecting SQL Rows Through JDBC
 
-```
+  This is how you fetch all rows from an SQL <<<SELECT>>> query:
+
++--
 public class Main {
   public static void main(String[] args) {
     Collection<String> names = new JdbcSession(source)
@@ -21,13 +29,13 @@ public class Main {
       );
   }
 }
-```
++--
 
-There is an off-the-shelf `SingleOutcome` Outcome, which can be used
-if you interested in the first value of the first row of the `SELECT`
-query result set:
+  There is an off-the-shelf <<<SingleOutcome>>> Outcome, which can be used
+  if you interested in the first value of the first row of the <<<SELECT>>>
+  query result set:
 
-```
++--
 public class Main {
   public static void main(String[] args) {
     String name = new JdbcSession(source)
@@ -36,5 +44,5 @@ public class Main {
       .select(new SingleOutcome<String>(String.class));
   }
 }
-```
++--
 
